Refactored ArgCheck test to be more readable and easier to maintain and backport